--- a/food.html
+++ b/food.html
@@ -195,6 +195,18 @@
             <div><a href="#Register" draggable=true>註冊</a></div>
             <div><a href="#Login" draggable=true>登入</a></div>
         </div>
+        <div class="tyContainer tyLeftSide">
+            <div class="tyTitle">快速查詢</div>
+            <a href="#">
+                <div>機票資訊</div>
+            </a>
+            <a href="#">
+                <div>訂房資訊</div>
+            </a>
+            <a href="#">
+                <div>租車資訊</div>
+            </a>
+        </div>
     </div>
     <main>
         <div class="allMain">
