--- a/food.html
+++ b/food.html
@@ -195,18 +195,6 @@
             <div><a href="#Register" draggable=true>註冊</a></div>
             <div><a href="#Login" draggable=true>登入</a></div>
         </div>
-        <div class="tyContainer tyLeftSide">
-            <div class="tyTitle">快速查詢</div>
-            <a href="#">
-                <div>機票資訊</div>
-            </a>
-            <a href="#">
-                <div>訂房資訊</div>
-            </a>
-            <a href="#">
-                <div>租車資訊</div>
-            </a>
-        </div>
     </div>
     <main>
         <div class="allMain">
@@ -215,6 +203,13 @@
                 <div class="topcirleB"><strong>食</strong></div>
                 <div class="topcirleC"><strong>特</strong></div>
                 <div class="topcirleD"><strong>搜</strong></div>
+            </div>
+            <div id="tyModal">
+                <div class="tyModalContent">
+                    <span class="tyClose">&times;</span>
+                    <h1>好康報報</h1>
+                    <p>優惠資訊</p>
+                </div>
             </div>
             <div class="mainTopA">
                 <button onclick="mainFunctionA()" id="btn">日韓料理</button>
